--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<article id="youtube">
 								<h2 class="major">YouTube</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Make Sure to <a href="https://www.youtube.com/channel/UCUypgtiCJ-qLU35jBvWGAtA">subscribe</a> to my channel to get hear the latest mixes!</p>
+								<p>Make sure to <a href="https://www.youtube.com/channel/UCUypgtiCJ-qLU35jBvWGAtA">subscribe</a> to my channel to get hear the latest mixes!</p>
 								<p></p>
 							</article>
 
