--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<li><a href="#youtube">YouTube</a></li>
 								<li><a href="#discord">discord</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#shop">Shop</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
